--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -179,10 +179,28 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_new_line_below">Mulai baris baru dibawah</string>
     <string name="key_pos_1">Baris memulai (Pos beranda)</string>
     <string name="key_pos_end">Baris akhir (Pos akhir)</string>
+    <string name="key_pos_1_document">Memulai dokumen</string>
+    <string name="key_pos_end_document">Dokumen akhir</string>
+    <string name="key_ctrl_a">Pilih semua (Ctrl+A)</string>
+    <string name="key_tab">Tabulator</string>
+    <string name="start_on_bottom">Mulai dari bawah</string>
+    <string name="start_on_bottom_when_loading_document">Setelah memuat dokumen, posisikan kursor di ujungnya</string>
+    <string name="unordered_list_character">Karakter daftar yang tidak diurutkan</string>
+    <string name="character_to_start_items_of_unordered_list_with">Karakter mana yang akan digunakan untuk menunjukkan daftar yang tidak diurutkan</string>
     <string name="unordered_list_char_dash">Garis hubung (-)</string>
     <string name="unordered_list_char_asterisk">Bintang (*)</string>
     <string name="unordered_list_char_plus">Tambah (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor hanya dapat mengedit file lokal, dokumen tersedia secara offline dan tidak mendukung pengelola berkas yang tidak menyertakan berkas utasan penuh.</string>
+    <string name="sync_to_local_folder_notice">Catatan: Aplikasi sinkronisasi dapat menempatkan file di folder kustom. Buka dengan mengubah folder dokumen Markor yang sesuai, atau di pengelola file lain.</string>
+    <string name="configure_in_the_apps_settings">Konfigurasi di setelan aplikasi</string>
+    <string name="vertical_alignment">Letak vertikal</string>
+    <string name="horizontal_alignment">Letak horizontal</string>
+    <string name="default_">Bawaan</string>
+    <string name="left">Kiri</string>
+    <string name="right">Kanan</string>
+    <string name="top">Atas</string>
+    <string name="bottom">Bawah</string>
+    <string name="center">Di Tengah</string>
     <string name="translate">Terjemahan</string>
     <string name="report_bugs">Laporkan Bug</string>
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Info tentang donasi untuk developer atau kontribusi untuk project ini.</string>
