--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -201,6 +201,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">Atas</string>
     <string name="bottom">Bawah</string>
     <string name="center">Di Tengah</string>
+    <string name="textaction_spacing">Jarak teks aksi</string>
+    <string name="horizontal_space_between_textactions">Spasi horizontal di antara tombol tindakan teks</string>
     <string name="translate">Terjemahan</string>
     <string name="report_bugs">Laporkan Bug</string>
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Info tentang donasi untuk developer atau kontribusi untuk project ini.</string>
