--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -201,13 +201,28 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">Atas</string>
     <string name="bottom">Bawah</string>
     <string name="center">Di Tengah</string>
-    <string name="textaction_spacing">Jarak teks aksi</string>
+    <string name="textaction_spacing">Jarak tindakan teks</string>
     <string name="horizontal_space_between_textactions">Spasi horizontal di antara tombol tindakan teks</string>
+    <string name="center_text">Teks tengah</string>
+    <string name="edit_text_in_center_of_screen">Edit teks di tengah layar</string>
+    <string name="clipboard">Papan klip</string>
+    <string name="select_existing_document">Pilih dokumen yang sudah ada</string>
+    <string name="open_source_licenses">Lisensi sumber terbuka</string>
+    <string name="rate_this_app">Beri nilai aplikasi ini</string>
     <string name="translate">Terjemahan</string>
+    <string name="more_info_and_help">Info lebih lanjut dan bantuan</string>
     <string name="report_bugs">Laporkan Bug</string>
     <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Info tentang donasi untuk developer atau kontribusi untuk project ini.</string>
+    <string name="join_community">Bergabung ke Komunitas</string>
     <string name="bug_reports_suggest_improvements">Saran atau lapor bug</string>
     <string name="help_translating_this_app">Terjemahkan aplikasi ini ke bahasa lain</string>
+    <string name="source_code">Kode sumber</string>
+    <string name="project_license">Lisensi proyek</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Kode kontribusi untuk proyek. Semua orang dipersilakan untuk melakukannya, termasuk pendatang baru</string>
+    <string name="project_team">Tim proyek</string>
+    <string name="contributors_public_add_yourself_description">Tampilkan info kontributor. Berikan untuk ditampilkan di sini secara opt-in setelah berkontribusi</string>
+    <string name="descending">menurun</string>
+    <string name="ascending">menaik</string>
     <string name="error_picture_selection">Tidak ada gambar yang dipilih.</string>
     <string name="miscellaneous">Lain-lain</string>
     <string name="background">Latar Belakang</string>
