[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -223,8 +223,28 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors_public_add_yourself_description">Tampilkan info kontributor. Berikan untuk ditampilkan di sini secara opt-in setelah berkontribusi</string>
     <string name="descending">menurun</string>
     <string name="ascending">menaik</string>
+    <string name="disable_spelling_underline">Nonaktifkan garis bawah ejaan</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Saran keyboard tetap, garis bawah merah lenyap</string>
+    <string name="location">Lokasi</string>
+    <string name="text_lines">Baris teks</string>
+    <string name="text_characters">Karakter teks</string>
+    <string name="text_words">Teks kata</string>
+    <string name="directory">Direktori</string>
+    <string name="recently_viewed_documents">Dokumen yang dilihat baru-baru ini</string>
+    <string name="details">Rincian</string>
+    <string name="calendar">Kalender</string>
+    <string name="warning_disallowed_sd_access">Peringatan! Aplikasi ini tidak memiliki izin untuk menyimpan file ini, semua perubahan akan hilang. Tidak ada kemungkinan untuk menyelesaikan masalah atau untuk mengonfirmasi sesuatu, Android menolak akses apa pun di sini.</string>
     <string name="error_picture_selection">Tidak ada gambar yang dipilih.</string>
+    <string name="gallery_picture">Gambar galeri</string>
+    <string name="camera_picture">Foto kamera</string>
+    <string name="enable_undo_and_redo_be_patient">Aktifkan tindakan undo dan redo. Hanya cocok untuk penggunaan lanjutan, bersabarlah untuk tidak menghapus sesuatu yang penting. Tutup dan buka editor untuk menghapus histori.</string>
+    <string name="description">Deskripsi</string>
+    <string name="edit_picture">Edit foto atau gambar</string>
+    <string name="math">Matematika</string>
+    <string name="table_of_contents">Daftar Isi</string>
     <string name="miscellaneous">Lain-lain</string>
+    <string name="textaction">Teks tindakan</string>
+    <string name="textactions">Teks tindakan</string>
     <string name="background">Latar Belakang</string>
     <string name="font">Jenis Karakter</string>
     <string name="code_block">Blok kode</string>
