[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -245,7 +245,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="miscellaneous">Lain-lain</string>
     <string name="textaction">Teks tindakan</string>
     <string name="textactions">Teks tindakan</string>
+    <string name="prefer_view">Lebih suka tampilan</string>
+    <string name="no_calendar_app_is_installed">Tidak ada aplikasi kalender yang diinstal!</string>
+    <string name="popular_documents">Dokumen populer</string>
+    <string name="color">Warna</string>
+    <string name="zero_width_space">Spasi jarak nol</string>
+    <string name="basic_color_scheme">Skema warna dasar</string>
+    <string name="background_foreground_color_in_editor_works_dark_light">Mengubah latar belakang dan warna latar depan editor teks. Menyesuaikan dengan tema aplikasi sehingga tersedia dalam tema terang dan gelap. Sintaks menyoroti warna tetap sama.</string>
+    <string name="preset">Pengaturan tersimpan</string>
+    <string name="foreground">Latar depan</string>
     <string name="background">Latar Belakang</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Mengatur warna latar depan atau latar belakang teks? Memasukkan kode warna heks juga dimungkinkan.</string>
+    <string name="type">Tipe</string>
+    <string name="folder">Folder</string>
+    <string name="folder_is_created_without_extension">- Folder dibuat tanpa ekstensi berkas</string>
     <string name="font">Jenis Karakter</string>
+    <string name="recursive_search_in_current_directory">Pencarian rekursif di direktori saat ini.</string>
+    <string name="always_open_with_this_app">Selalu buka dengan aplikasi ini</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Selalu buka file dengan aplikasi ini saat daftar berisi ekstensi file. Gunakan \'None, .html, .css, .js\' misalnya jika Anda ingin mengedit file web dan yang tanpa ekstensi file.</string>
+    <string name="template">Sampul</string>
+    <string name="send_debug_log">Kirim Log Debug</string>
+    <string name="print_pdf">Print / PDF</string>
+    <string name="bigger_headings">Judul yang lebih besar</string>
+    <string name="increase_text_size_of_headings_according_to_level">Meningkatkan ukuran teks header sesuai dengan tingkat (# h1, ## h2.### h3 ...)</string>
+    <string name="current">Saat ini</string>
+    <string name="record_audio">Rekam audio</string>
     <string name="code_block">Blok kode</string>
 </resources>
