[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -270,5 +270,47 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="increase_text_size_of_headings_according_to_level">Meningkatkan ukuran teks header sesuai dengan tingkat (# h1, ## h2.### h3 ...)</string>
     <string name="current">Saat ini</string>
     <string name="record_audio">Rekam audio</string>
+    <string name="attach">Lampiran</string>
+    <string name="copy_file">Duplikasi File</string>
+    <string name="page">Halaman</string>
+    <string name="experimental_features">Fitur eksperimental</string>
+    <string name="tools">Peralatan</string>
+    <string name="reading">Membaca</string>
+    <string name="read">Baca</string>
+    <string name="table">Tabel</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Berapa banyak kolom? Tekan tombol tabel lama untuk memulai tabel (sisipkan header), tekan pendek untuk menambahkan baris.</string>
+    <string name="example_of_a_markdown_table">Contoh dari tabel Markdown</string>
+    <string name="delete_lines">Hapus baris</string>
+    <string name="unordered_list">Daftar tak berurutan</string>
+    <string name="ordered_list">Daftar yang berurutan</string>
+    <string name="check_list">Check list</string>
+    <string name="open_link">Buka tautan</string>
+    <string name="common_color_picker">Pemilih warna</string>
+    <string name="date_and_time">Tanggal dan waktu</string>
+    <string name="jump_to_bottom">Lompat ke bawah</string>
+    <string name="quote">Kutipan</string>
+    <string name="heading">Judul</string>
+    <string name="heading_1">Judul 1</string>
+    <string name="heading_2">Judul 2</string>
+    <string name="heading_3">Judul 3</string>
+    <string name="heading_4">Judul 4</string>
+    <string name="heading_5">Judul 5</string>
+    <string name="heading_6">Judul 6</string>
+    <string name="bold">Tebal</string>
+    <string name="italic">Miring</string>
+    <string name="highlighted">Disorot</string>
+    <string name="strikeout">Strike out</string>
+    <string name="inline_code">Inline code</string>
+    <string name="horizontal_line">Baris horizontal</string>
+    <string name="toggle_done">Beralih dilakukan</string>
+    <string name="link_color">Warna tautan</string>
+    <string name="add_context">Tambah konteks</string>
+    <string name="add_project">Tambah proyek</string>
+    <string name="archive_completed_tasks">Arsipkan tugas yang selesai</string>
+    <string name="sort_alphabetically">Urutkan sesuai abjad</string>
+    <string name="create_new_file_or_folder">Buat berkas baru atau folder</string>
+    <string name="choose_format">Pilih format</string>
     <string name="code_block">Blok kode</string>
+    <string name="copy_move_conflict_message">\'%s\' sudah ada di %s</string>
+    <string name="additional_contexts_and_projects">Konteks dan proyek tambahan</string>
 </resources>
