[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -174,11 +174,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="special_key">Kunci Spesial</string>
     <string name="key_page_up">Halaman atas (Halaman atas)</string>
     <string name="key_page_down">Halaman bawah (Halaman bawah)</string>
-    <string name="move_text_one_line_up">Pindah teks satu baris atas</string>
-    <string name="move_text_one_line_down">Pindah teks satu baris bawah</string>
+    <string name="move_text_one_line_up">Pindah teks ke satu baris atas</string>
+    <string name="move_text_one_line_down">Pindah teks ke satu baris bawah</string>
     <string name="start_new_line_below">Mulai baris baru dibawah</string>
     <string name="key_pos_1">Baris memulai (Pos beranda)</string>
-    <string name="key_pos_end">Baris akhir (Pos akhir)</string>
+    <string name="key_pos_end">Baris terakhir (Pos akhir)</string>
     <string name="key_pos_1_document">Memulai dokumen</string>
     <string name="key_pos_end_document">Dokumen akhir</string>
     <string name="key_ctrl_a">Pilih semua (Ctrl+A)</string>
@@ -186,8 +186,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom">Mulai dari bawah</string>
     <string name="start_on_bottom_when_loading_document">Setelah memuat dokumen, posisikan kursor di ujungnya</string>
     <string name="unordered_list_character">Karakter daftar yang tidak diurutkan</string>
-    <string name="character_to_start_items_of_unordered_list_with">Karakter mana yang akan digunakan untuk menunjukkan daftar yang tidak diurutkan</string>
-    <string name="unordered_list_char_dash">Garis hubung (-)</string>
+    <string name="character_to_start_items_of_unordered_list_with">Pilih karakter yang akan digunakan untuk menunjukkan daftar yang tidak diurutkan</string>
+    <string name="unordered_list_char_dash">Tanda hubung (-)</string>
     <string name="unordered_list_char_asterisk">Bintang (*)</string>
     <string name="unordered_list_char_plus">Tambah (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor hanya dapat mengedit file lokal, dokumen tersedia secara offline dan tidak mendukung pengelola berkas yang tidak menyertakan berkas utasan penuh.</string>
@@ -200,8 +200,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="right">Kanan</string>
     <string name="top">Atas</string>
     <string name="bottom">Bawah</string>
-    <string name="center">Di Tengah</string>
-    <string name="textaction_spacing">Jarak tindakan teks</string>
+    <string name="center">Tengah</string>
+    <string name="textaction_spacing">Spasi tindakan teks</string>
     <string name="horizontal_space_between_textactions">Spasi horizontal di antara tombol tindakan teks</string>
     <string name="center_text">Teks tengah</string>
     <string name="edit_text_in_center_of_screen">Edit teks di tengah layar</string>
@@ -209,12 +209,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select_existing_document">Pilih dokumen yang sudah ada</string>
     <string name="open_source_licenses">Lisensi sumber terbuka</string>
     <string name="rate_this_app">Beri nilai aplikasi ini</string>
-    <string name="translate">Terjemahan</string>
+    <string name="translate">Terjemahkan</string>
     <string name="more_info_and_help">Info lebih lanjut dan bantuan</string>
     <string name="report_bugs">Laporkan Bug</string>
-    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Info tentang donasi untuk developer atau kontribusi untuk project ini.</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Info tentang donasi untuk developer atau kontribusi untuk proyek ini.</string>
     <string name="join_community">Bergabung ke Komunitas</string>
-    <string name="bug_reports_suggest_improvements">Saran atau lapor bug</string>
+    <string name="bug_reports_suggest_improvements">Memberikan umpan balik, melaporkan bug atau menyarankan perbaikan</string>
     <string name="help_translating_this_app">Terjemahkan aplikasi ini ke bahasa lain</string>
     <string name="source_code">Kode sumber</string>
     <string name="project_license">Lisensi proyek</string>
@@ -223,7 +223,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors_public_add_yourself_description">Tampilkan info kontributor. Berikan untuk ditampilkan di sini secara opt-in setelah berkontribusi</string>
     <string name="descending">menurun</string>
     <string name="ascending">menaik</string>
-    <string name="disable_spelling_underline">Nonaktifkan garis bawah ejaan</string>
+    <string name="disable_spelling_underline">Non-aktifkan garis bawah ejaan</string>
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Saran keyboard tetap, garis bawah merah lenyap</string>
     <string name="location">Lokasi</string>
     <string name="text_lines">Baris teks</string>
@@ -231,13 +231,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="text_words">Teks kata</string>
     <string name="directory">Direktori</string>
     <string name="recently_viewed_documents">Dokumen yang dilihat baru-baru ini</string>
-    <string name="details">Rincian</string>
+    <string name="details">Detail</string>
     <string name="calendar">Kalender</string>
     <string name="warning_disallowed_sd_access">Peringatan! Aplikasi ini tidak memiliki izin untuk menyimpan file ini, semua perubahan akan hilang. Tidak ada kemungkinan untuk menyelesaikan masalah atau untuk mengonfirmasi sesuatu, Android menolak akses apa pun di sini.</string>
-    <string name="error_picture_selection">Tidak ada gambar yang dipilih.</string>
+    <string name="error_picture_selection">Tidak ada gambar yang dipilih, diambil atau disimpan.</string>
     <string name="gallery_picture">Gambar galeri</string>
     <string name="camera_picture">Foto kamera</string>
-    <string name="enable_undo_and_redo_be_patient">Aktifkan tindakan undo dan redo. Hanya cocok untuk penggunaan lanjutan, bersabarlah untuk tidak menghapus sesuatu yang penting. Tutup dan buka editor untuk menghapus histori.</string>
+    <string name="enable_undo_and_redo_be_patient">Aktifkan tindakan undo dan redo. Hanya cocok untuk penggunaan lanjutan, bersabarlah untuk tidak menghapus sesuatu yang penting. Tutup dan buka editor untuk menghapus riwayat.</string>
     <string name="description">Deskripsi</string>
     <string name="edit_picture">Edit foto atau gambar</string>
     <string name="math">Matematika</string>
