--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -265,7 +265,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Selalu buka file dengan aplikasi ini saat daftar berisi ekstensi file. Gunakan \'None, .html, .css, .js\' misalnya jika Anda ingin mengedit file web dan yang tanpa ekstensi file.</string>
     <string name="template">Sampul</string>
     <string name="send_debug_log">Kirim Log Debug</string>
-    <string name="print_pdf">Print / PDF</string>
+    <string name="print_pdf">Cetak / PDF</string>
     <string name="bigger_headings">Judul yang lebih besar</string>
     <string name="increase_text_size_of_headings_according_to_level">Meningkatkan ukuran teks header sesuai dengan tingkat (# h1, ## h2.### h3 ...)</string>
     <string name="current">Saat ini</string>
