[ci skip] Update translations (Indonesian)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -259,7 +259,22 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="type">Tipe</string>
     <string name="folder">Folder</string>
     <string name="folder_is_created_without_extension">- Folder dibuat tanpa ekstensi berkas</string>
+    <string name="keep_existing_file">- Berkas dan folder tidak akan ditimpa</string>
+    <string name="multiple_windows">Jendela ganda</string>
     <string name="font">Jenis Karakter</string>
+    <string name="open_new_documents_always_in_new_window">Buka dokumen selalu di jendela terpisah. Beralih menggunakan tombol \'terbaru\' perangkat Anda.</string>
+    <string name="enter_or_select_format">Masukkan atau pilih format</string>
+    <string name="pick_date">Pilih tanggal</string>
+    <string name="pick_time">Pilih waktu</string>
+    <string name="get_format_instead_date_or_time">Dapatkan format sebagai gantinya tanggal atau waktu</string>
+    <string name="always_use_current_date_and_time">Selalu gunakan tanggal &amp; waktu saat ini</string>
+    <string name="result">Hasil</string>
+    <string name="just_time">Hanya waktu</string>
+    <string name="just_date">Hanya tanggal</string>
+    <string name="last_used">Terakhir digunakan</string>
+    <string name="my_note">nama_catatan</string>
+    <string name="close">Tutup</string>
+    <string name="cancel">Batal</string>
     <string name="recursive_search_in_current_directory">Pencarian rekursif di direktori saat ini.</string>
     <string name="always_open_with_this_app">Selalu buka dengan aplikasi ini</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Selalu buka file dengan aplikasi ini saat daftar berisi ekstensi file. Gunakan \'None, .html, .css, .js\' misalnya jika Anda ingin mengedit file web dan yang tanpa ekstensi file.</string>
